# AgentHarnessProtocol

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
examples/: README.md  ahp_server.py  http_client.rs  http_server.rs  simple_client.rs  simple_server.py  test_ahp_idle_detection.py  websocket_client.rs  websocket_server.rs
src/: auth.rs  client.rs  error.rs  lib.rs  protocol.rs  server.rs  transport.rs
src/protocol/: context.rs  core.rs  events.rs  json_rpc.rs
src/server/: tests.rs
src/transport/: grpc.rs  http.rs  stdio.rs  unix_socket.rs  websocket.rs
