[package]
name = "a3s-ahp"
version = "0.1.0"
edition = "2021"
authors = ["A3S Lab Team"]
license = "MIT"
repository = "https://github.com/A3S-Lab/AgentHarnessProtocol"
description = "Agent Harness Protocol — language-agnostic JSON-RPC 2.0 supervision layer for A3S Code agent sessions"

[lib]
name = "a3s_ahp"
path = "src/lib.rs"

[dependencies]
a3s-code-core = { version = "1.0", path = "../code/core" }

async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["process", "io-util", "sync", "time", "rt", "macros"] }
tracing = "0.1"
anyhow = "1.0"

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
