[package]
name = "a3s-ahp"
version = "2.0.0"
edition = "2021"
authors = ["A3S Lab Team"]
license = "MIT"
repository = "https://github.com/A3S-Lab/AgentHarnessProtocol"
description = "Agent Harness Protocol v2.0 — Universal, transport-agnostic protocol for supervising autonomous AI agents"

[lib]
name = "a3s_ahp"
path = "src/lib.rs"

[features]
default = ["stdio"]
stdio = []
http = ["reqwest", "axum", "tower", "tower-http"]
websocket = ["tokio-tungstenite", "futures-util"]
grpc = ["tonic", "prost", "prost-types"]
unix-socket = ["tokio/net"]
all-transports = ["stdio", "http", "websocket", "grpc", "unix-socket"]

[dependencies]
# Core dependencies
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["process", "io-util", "sync", "time", "rt", "macros", "fs"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Optional: A3S Code integration
a3s-code-core = { version = "1.3", path = "../code/core", optional = true }

# HTTP transport
reqwest = { version = "0.12", features = ["json"], optional = true }
axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["trace", "cors"], optional = true }

# WebSocket transport
tokio-tungstenite = { version = "0.24", optional = true }
futures-util = { version = "0.3", optional = true }

# gRPC transport
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
prost-types = { version = "0.13", optional = true }

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

[build-dependencies]
tonic-build = { version = "0.12", optional = true }
