[package]
name = "a3s-ahp"
version = "2.4.0"
edition = "2021"
authors = ["A3S Lab Team"]
license = "MIT"
repository = "https://github.com/A3S-Lab/AgentHarnessProtocol"
description = "Agent Harness Protocol v2.4 — Universal, transport-agnostic protocol for supervising autonomous AI agents"

[lib]
name = "a3s_ahp"
path = "src/lib.rs"

[[example]]
name = "http_client"
required-features = ["http"]

[[example]]
name = "http_server"
required-features = ["http"]

[[example]]
name = "websocket_client"
required-features = ["websocket"]

[[example]]
name = "websocket_server"
required-features = ["websocket"]

[features]
default = ["stdio"]
stdio = []
http = ["reqwest", "axum", "tower", "tower-http"]
websocket = ["tokio-tungstenite", "futures-util", "url"]
grpc = ["tonic", "prost", "prost-types"]
unix-socket = ["tokio/net"]
all-transports = ["stdio", "http", "websocket", "unix-socket"]

[dependencies]
# Core dependencies
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["process", "io-util", "io-std", "sync", "time", "rt", "macros", "fs"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }


# HTTP transport
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["trace", "cors"], optional = true }

# WebSocket transport
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-native-roots", "connect"], optional = true }
futures-util = { version = "0.3", optional = true }
url = { version = "2.5", optional = true }

# gRPC transport
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
prost-types = { version = "0.13", optional = true }

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

[build-dependencies]
tonic-build = { version = "0.12", optional = true }
